# VTP_Plugin

./: .gitignore  MIGRATION_GUIDE.md  README.md  README_IMPROVED.md  equations.txt  main.py  main_new.py  mesh_stuff.py  move_gcode_line.py  outputtest.gcode  printing_stats.py  pyproject.toml  requirements.txt  test_mesh.3mf  test_mesh.gcode  vtp_plugin.txt  z_shift_log.txt
slicer/: PrusaSlicer_config_bundle.ini
src/vtp_plugin/: __init__.py  cli.py
src/vtp_plugin/core/: __init__.py  config.py  exceptions.py  processor.py
src/vtp_plugin/models/: __init__.py  gcode.py  mesh.py  printing_stats.py
src/vtp_plugin/utils/: __init__.py  file_utils.py  math_utils.py
tests/: __init__.py  test_gcode.py
